# vec

./: AI-INTEGRATION.md  ARCHITECTURE.md  BUGS.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MCP.md  PACKAGING.md  PROJECT.md  README.md  SECURITY.md  TESTING.md  TODO.md  flake.nix
.cargo/: config.toml
.claude/skills/vec/: SKILL.md
.github/workflows/: ci.yml  release.yml
contrib/: 99-vec.conf  vec-embed.service  vec-model-base.spec  vec-updatedb.service  vec-updatedb.timer  vec-watch.service  vec.conf  vec.spec
contrib/debian/: changelog  control  rules  vec-model-base.install  vec-model-base.postinst  vec.install  vec.postinst
contrib/user/: vec-embed.service  vec-updatedb.service  vec-updatedb.timer  vec-watch.service
crates/vec-cli/: Cargo.toml
crates/vec-cli/src/: main.rs
crates/vec-core/: Cargo.toml
crates/vec-core/src/: config.rs  lib.rs
crates/vec-daemon/: Cargo.toml
crates/vec-daemon/src/: lib.rs
crates/vec-embed/: Cargo.toml
crates/vec-embed/src/: lib.rs
crates/vec-index/: Cargo.toml
crates/vec-index/src/: lib.rs
crates/vec-mcp/: Cargo.toml
crates/vec-mcp/src/: lib.rs
crates/vec-store/: Cargo.toml
crates/vec-store/src/: lib.rs
crates/vec-watch/: Cargo.toml
crates/vec-watch/src/: lib.rs
src/: config.rs  daemon.rs  embed.rs  index.rs  main.rs  mcp.rs  store.rs  util.rs  watch.rs
