[workspace]
members = [
    "crates/vec-core",
    "crates/vec-embed",
    "crates/vec-store",
    "crates/vec-index",
    "crates/vec-watch",
    "crates/vec-daemon",
    "crates/vec-mcp",
    "crates/vec-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kvzp/vec"

[profile.release]
strip = true
lto = true
codegen-units = 1
