[package]
name = "vec-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "vec CLI binary — semantic file search"
license = "MIT"

[[bin]]
name = "vec"
path = "src/main.rs"

[dependencies]
vec-core   = { path = "../vec-core" }
vec-embed  = { path = "../vec-embed" }
vec-store  = { path = "../vec-store" }
vec-index  = { path = "../vec-index" }
vec-watch  = { path = "../vec-watch" }
vec-daemon = { path = "../vec-daemon" }
vec-mcp    = { path = "../vec-mcp" }
clap       = { version = "4", features = ["derive"] }
tokio      = { version = "1", features = ["rt-multi-thread", "macros"] }
anstream   = "0.6"
anyhow     = "1"
dirs       = "5"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
