[package]
name = "vec-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "vec shared foundations: config, util, embedder loading"
license = "MIT"

[dependencies]
serde   = { version = "1", features = ["derive"] }
toml    = "0.8"
dirs    = "5"
anyhow  = "1"
anstream = "0.6"
vec-embed = { path = "../vec-embed" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "fs"] }

[dev-dependencies]
tempfile = "3"
