[package]
name = "vec-embed"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "vec ONNX embedding inference"
license = "MIT"

[dependencies]
tract-onnx = "0.21"
tokenizers = "0.21"
rayon      = "1.10"
sha2       = "0.10"
hex        = "0.4"
prost      = "0.11"
ndarray    = "0.17"
anyhow     = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
