[package]
name = "vec-index"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "vec file walker, chunker, and incremental indexer"
license = "MIT"

[dependencies]
vec-core  = { path = "../vec-core" }
vec-embed = { path = "../vec-embed" }
vec-store = { path = "../vec-store" }
ignore    = "0.4"
sha2      = "0.10"
hex       = "0.4"
rayon     = "1.10"
anyhow    = "1"

[dev-dependencies]
tempfile = "3"
